[gd_scene load_steps=8 format=3 uid="uid://bava8ooxr5wit"]

[ext_resource type="Script" path="res://Scenes/Game/Balls/_Parent/ball.gd" id="1_s6x7l"]
[ext_resource type="Texture2D" uid="uid://c85ppvicsywil" path="res://Assets/Sprites/Balls.png" id="2_1m76x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c7gwe"]
atlas = ExtResource("2_1m76x")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxr37"]
atlas = ExtResource("2_1m76x")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6acug"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7gwe")
}],
"loop": true,
"name": &"basic",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxr37")
}],
"loop": true,
"name": &"red",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_c3xig"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jow4w"]
radius = 4.0

[node name="Ball" type="RigidBody2D"]
collision_layer = 2
collision_mask = 5
lock_rotation = true
script = ExtResource("1_s6x7l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_6acug")
animation = &"basic"
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "res://Assets/Sprites",
"o_name": "",
"only_visible": false,
"slice": "",
"source": "res://Assets/Sprites/Balls.ase"
}
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": false,
"output_section": true,
"slice_section": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_c3xig")

[node name="CollisionCooldown" type="Timer" parent="."]
one_shot = true

[node name="EventTimer" type="Timer" parent="."]
one_shot = true

[node name="PitCollidor" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PitCollidor"]
shape = SubResource("CircleShape2D_jow4w")
debug_color = Color(0.701961, 0, 0.52549, 0.419608)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="EventTimer" to="." method="_on_event_timer_timeout"]
[connection signal="area_entered" from="PitCollidor" to="." method="_on_pit_collidor_area_entered"]
